Add full set of images to training and some explanation on notebook

--- a/project/0003_tensorflow_custom_object_recognition.ipynb
+++ b/project/0003_tensorflow_custom_object_recognition.ipynb
@@ -1,8 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Identification of Aedes Aegypti Eggs\n",
+    "\n",
+    "Image classification using Keras. This project uses the Keras Fast RCNN model to identify Aedes Aegypti eggs in images taken from traps spread around Recife and Region.\n",
+    "\n",
+    "The dataset was provided by [Pickcells](http://www.pickcells.bio/).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Preprocessing\n",
+    "\n",
+    "To perform Image Classification, the first thing to do is Label a sample of images. To do so, I used [LabelImg](https://github.com/tzutalin/labelImg). It will generate a XLM file with the coordinates of the objects marked. The sample images are on `data/training`.\n",
+    "\n",
+    "After label the images, it's time to generate a CSV with the data includes on XML. The python script `utils/xml_to_csv.py` will do the job.\n",
+    "\n",
+    "## Visualizing Data\n",
+    "\n",
+    "The below script demonstrates how the labels work. Simply load the CSV file and chose one image to display rectangles on the marked coordinates, which has the objects to detect."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -259,6 +282,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training\n",
+    "\n",
+    "The Keras Faster RCNN needs a txt file with the same format the CSV file generated before."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -281,11 +313,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now the model is has enough resources to be trained. The model can be found in `model/keras-frcnn` directory. To perform the training just run in terminal: `python train_frcnn.py -o simple -p ../../annotate.txt --num_epochs=50`.\n",
+    "The model was edited to perform 50 epochs with 10 iterations each due to hardware limitations, it could take too long to train.\n",
+    "\n",
+    "Once the traning finishes, the weights file will be generated into `model/kearas-frcnn/model_frcnn.hdf5`. Now the test can be performed with the command `python test_frcnn.py -p ../../data/testing`. The result of the testing will be saved in `data/output` directory."
+   ]
   }
  ],
  "metadata": {
