Create pdf for 0001 and 0002

--- a/project/0002_apply_color_segmentation_for_many_images.ipynb
+++ b/project/0002_apply_color_segmentation_for_many_images.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Applying the color segmentation to other samples\n",
+    "\n",
+    "This script applies the color segmentation 0001_color_segmentation code in another image samples.\n",
+    "The results were not so good at all."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -365,13 +375,6 @@
     "    plt.imshow(result)\n",
     "    plt.show()    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
