--- a/project/0001_color_segmentation.ipynb
+++ b/project/0001_color_segmentation.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Color Segmentation\n",
+    "\n",
+    "This experiment tries to segment objects from an image based on color using OpenCV.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -25,6 +34,13 @@
     "plt.rcParams['figure.dpi'] = 120\n",
     "\n",
     "print(\"OpenCV Version: %s\" % cv.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open the image in RGB Color Space"
    ]
   },
   {
@@ -59,9 +75,14 @@
     "img = cv.imread('images/aedes.jpg')\n",
     "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)\n",
     "\n",
-    "# ret, thresh = cv.threshold(gray, 0, 255, cv.THRESH_BINARY_INV + cv.THRESH_OTSU)\n",
-    "\n",
     "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualizing the Color Space of the image above in a graph"
    ]
   },
   {
@@ -103,6 +124,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now visualize the Color Space in HSV. Note that the color ranges are easier to visualize because they're better separeted than in RGB Color Space."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -133,6 +161,13 @@
     "axis.set_zlabel('Value')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the range of colors based on the HSV Color Space graph above."
    ]
   },
   {
@@ -179,6 +214,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we have the color range, let's try to threshold the aedes eggs image.\n",
+    "Obs.: The values are differnte from above due to some tests with another values. The above range was not so precise."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -197,6 +240,8 @@
     }
    ],
    "source": [
+    "# experimenting other ranges\n",
+    "\n",
     "light = (110, 0, 0)\n",
     "dark = (255, 185, 120)\n",
     "\n",
@@ -210,13 +255,6 @@
     "plt.imshow(result)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
